[package]
name = "audio-toolbox"
description = "Bindings to Audio Toolbox for OS X"
version = "0.0.1"
authors = ["Dan Glastonbury <dan.glastonbury@gmail.com>"]
license = "MIT / Apache-2.0"

[dependencies]
audio-toolbox-sys = { path = "../audio-toolbox-sys" }
bitflags = "1.0"
core-audio = { path = "../../core-audio-rs/core-audio" }
core-foundation = "0.4"
libc = "0.2"